--- a/Titanic_machine_learning/gendermodel.ipynb
+++ b/Titanic_machine_learning/gendermodel.ipynb
@@ -1,62 +1,361 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# simply find what proportion of males and females"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The history saving thread hit an unexpected error (OperationalError('disk I/O error',)).History will not be written to the database.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv as csv\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "\"\"\" This simple code is desinged to teach a basic user to read in the files in python, simply find what proportion of males and females survived and make a predictive model based on this\n",
-    "\n",
-    "\n",
-    "Revised: 28 March 2014\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "\n",
-    "import csv as csv\n",
-    "import numpy as np\n",
-    "\n",
-    "csv_file_object = csv.reader(open('train.csv', 'rb')) \t# Load in the csv file\n",
-    "header = csv_file_object.next() \t\t\t\t\t\t# Skip the fist line as it is a header\n",
-    "data=[] \t\t\t\t\t\t\t\t\t\t\t\t# Create a variable to hold the data\n",
-    "\n",
-    "for row in csv_file_object: \t\t\t\t\t\t\t# Skip through each row in the csv file,\n",
-    "    data.append(row[0:]) \t\t\t\t\t\t\t\t# adding each row to the data variable\n",
-    "data = np.array(data) \t\t\t\t\t\t\t\t\t# Then convert from a list to an array.\n",
-    "\n",
-    "# Now I have an array of 12 columns and 891 rows\n",
-    "# I can access any element I want, so the entire first column would\n",
-    "# be data[0::,0].astype(np.float) -- This means all of the rows (from start to end), in column 0\n",
-    "# I have to add the .astype() command, because\n",
-    "# when appending the rows, python thought it was a string - so needed to convert\n",
-    "\n",
-    "# Set some variables\n",
-    "number_passengers = np.size(data[0::,1].astype(np.float))\n",
-    "number_survived = np.sum(data[0::,1].astype(np.float))\n",
-    "proportion_survivors = number_survived / number_passengers \n",
-    "\n",
-    "# I can now find the stats of all the women on board,\n",
-    "# by making an array that lists True/False whether each row is female\n",
-    "women_only_stats = data[0::,4] == \"female\" \t# This finds where all the women are\n",
-    "men_only_stats = data[0::,4] != \"female\" \t# This finds where all the men are (note != means 'not equal')\n",
-    "\n",
-    "# I can now filter the whole data, to find statistics for just women, by just placing\n",
-    "# women_only_stats as a \"mask\" on my full data -- Use it in place of the '0::' part of the array index. \n",
-    "# You can test it by placing it there, and requesting column index [4], and the output should all read 'female'\n",
-    "# e.g. try typing this:   data[women_only_stats,4]\n",
-    "women_onboard = data[women_only_stats,1].astype(np.float)\n",
-    "men_onboard = data[men_only_stats,1].astype(np.float)\n",
-    "\n",
-    "# and derive some statistics about them\n",
-    "proportion_women_survived = np.sum(women_onboard) / np.size(women_onboard)\n",
-    "proportion_men_survived = np.sum(men_onboard) / np.size(men_onboard)\n",
-    "\n",
+    "# Load in the csv file\n",
+    "csv_file_object = csv.reader(open('train.csv', 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Skip the fist line as it is a header\n",
+    "header = csv_file_object.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Skip through each row in the csv file,\n",
+    "for row in csv_file_object: \n",
+    "    data.append(row[0:]) \n",
+    "data = np.array(data) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['1', '0', '3', ..., '7.25', '', 'S'],\n",
+       "       ['2', '1', '1', ..., '71.2833', 'C85', 'C'],\n",
+       "       ['3', '1', '3', ..., '7.925', '', 'S'],\n",
+       "       ..., \n",
+       "       ['889', '0', '3', ..., '23.45', '', 'S'],\n",
+       "       ['890', '1', '1', ..., '30', 'C148', 'C'],\n",
+       "       ['891', '0', '3', ..., '7.75', '', 'Q']], \n",
+       "      dtype='|S82')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "number_passengers = np.size(data[0::,1].astype(np.float))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "891"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_passengers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "number_survived = np.sum(data[0::,1].astype(np.float))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "342.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_survived"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "proportion_survivors = number_survived / number_passengers \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.38383838383838381"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "proportion_survivors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "women_only_stats = data[0::,4] == \"female\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "women_only_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "men_only_stats = data[0::,4] != \"female\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "women_onboard = data[women_only_stats,1].astype(np.float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.,  1.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,  0.,  1.,  1.,  0.,\n",
+       "        1.,  1.,  1.,  1.,  0.,  1.,  0.,  0.,  1.,  1.,  1.,  0.,  1.,\n",
+       "        1.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,  1.,  1.,  1.,  1.,  1.,\n",
+       "        0.,  1.,  1.,  0.,  0.,  0.,  0.,  1.,  1.,  0.,  1.,  1.,  0.,\n",
+       "        1.,  1.,  0.,  1.,  1.,  1.,  1.,  0.,  1.,  0.,  0.,  1.,  1.,\n",
+       "        1.,  1.,  1.,  1.,  1.,  0.,  0.,  1.,  1.,  1.,  1.,  1.,  0.,\n",
+       "        1.,  1.,  0.,  1.,  0.,  1.,  0.,  1.,  0.,  0.,  1.,  1.,  1.,\n",
+       "        1.,  1.,  0.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,  1.,  1.,  1.,\n",
+       "        0.,  0.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,  1.,\n",
+       "        1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,\n",
+       "        1.,  1.,  1.,  0.,  1.,  1.,  0.,  1.,  1.,  1.,  1.,  0.,  1.,\n",
+       "        1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,  0.,  0.,  0.,\n",
+       "        1.,  0.,  1.,  1.,  0.,  0.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,\n",
+       "        1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,  1.,  0.,\n",
+       "        1.,  1.,  0.,  0.,  0.,  0.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,\n",
+       "        1.,  1.,  1.,  0.,  1.,  1.,  1.,  1.,  0.,  0.,  1.,  1.,  1.,\n",
+       "        1.,  1.,  0.,  0.,  1.,  1.,  1.,  1.,  0.,  1.,  1.,  1.,  1.,\n",
+       "        0.,  1.,  1.,  1.,  1.,  0.,  1.,  1.,  0.,  1.,  1.,  0.,  1.,\n",
+       "        0.,  1.,  0.,  1.,  1.,  1.,  1.,  0.,  0.,  1.,  1.,  1.,  0.,\n",
+       "        0.,  1.,  1.,  1.,  1.,  0.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,\n",
+       "        1.,  0.,  1.,  0.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  0.,  0.,\n",
+       "        1.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,  1.,  0.,  1.,  0.,  1.,\n",
+       "        0.,  0.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  0.,  1.,  0.,  1.,\n",
+       "        1.,  1.,  1.,  0.,  1.,  1.,  1.,  1.,  1.,  1.,  1.,  0.,  0.,\n",
+       "        1.,  0.])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "women_onboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "men_onboard = data[men_only_stats,1].astype(np.float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "proportion_women_survived = np.sum(women_onboard) / np.size(women_onboard)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "proportion_men_survived = np.sum(men_onboard) / np.size(men_onboard)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of women who survived is 0.742038216561\n",
+      "Proportion of men who survived is 0.188908145581\n"
+     ]
+    }
+   ],
+   "source": [
     "print 'Proportion of women who survived is %s' % proportion_women_survived\n",
-    "print 'Proportion of men who survived is %s' % proportion_men_survived\n",
-    "\n",
+    "print 'Proportion of men who survived is %s' % proportion_men_survived\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Now that I have my indicator that women were much more likely to survive,\n",
     "# I am done with the training set.\n",
     "# Now I will read in the test file and write out my simplistic prediction:\n",
@@ -66,7 +365,17 @@
     "# First, read in test.csv\n",
     "test_file = open('test.csv', 'rb')\n",
     "test_file_object = csv.reader(test_file)\n",
-    "header = test_file_object.next()\n",
+    "header = test_file_object.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "\n",
     "# Also open the a new file so I can write to it. Call it something descriptive\n",
     "# Finally, loop through each row in the train file, and look in column index [3] (which is 'Sex')\n",
@@ -74,14 +383,25 @@
     "\n",
     "predictions_file = open(\"gendermodel.csv\", \"wb\")\n",
     "predictions_file_object = csv.writer(predictions_file)\n",
-    "predictions_file_object.writerow([\"PassengerId\", \"Survived\"])\t# write the column headers\n",
-    "for row in test_file_object:\t\t\t\t\t\t\t\t\t# For each row in test file,\n",
-    "    if row[3] == 'female':\t\t\t\t\t\t\t\t\t\t# is it a female, if yes then\n",
-    "        predictions_file_object.writerow([row[0], \"1\"])\t\t\t# write the PassengerId, and predict 1\n",
-    "    else:\t\t\t\t\t\t\t\t\t\t\t\t\t\t# or else if male,\n",
-    "        predictions_file_object.writerow([row[0], \"0\"])\t\t\t# write the PassengerId, and predict 0.\n",
-    "test_file.close()\t\t\t\t\t\t\t\t\t\t\t\t# Close out the files.\n",
+    "predictions_file_object.writerow([\"PassengerId\", \"Survived\"])   # write the column headers\n",
+    "for row in test_file_object:                                    # For each row in test file,\n",
+    "    if row[3] == 'female':                                      # is it a female, if yes then\n",
+    "        predictions_file_object.writerow([row[0], \"1\"])         # write the PassengerId, and predict 1\n",
+    "    else:                                                       # or else if male,\n",
+    "        predictions_file_object.writerow([row[0], \"0\"])         # write the PassengerId, and predict 0.\n",
+    "test_file.close()                                               # Close out the files.\n",
     "predictions_file.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
